Fixed issue with menu visibility

--- a/styles-dark.scss
+++ b/styles-dark.scss
@@ -43,3 +43,8 @@ kbd, .kbd {
 .cropped-image {
     border-color: #e0e0e0; /* Adjust border color for better visibility */
 }
+
+.dropdown-menu {
+
+    background-color: #222 !important;
+}
